# taugpt-kvcache-bench

./: .gitignore  Cargo.toml  LICENSE  README.md  prompt.jsonl  prompts.jsonl
analysis/: aggregation_analysis.py  all_tokens_latencies.py  extrapolate_tau_speedup.py  requirements.txt
domain_manifold/: manifold.json  manifold.parquet
output/1767066084/: runs.csv  token_latencies.csv
output/1767089337/: runs.csv  token_latencies.csv
output/1767090496/: runs.csv  token_latencies.csv
output/1767094626/: runs.csv  token_latencies.csv
output/1767102282/: runs.csv  token_latencies.csv
output/1767104587/: runs.csv  token_latencies.csv
output/1767204018/: runs.csv  token_latencies.csv
output/1767240798/: runs.csv  token_latencies.csv
output/1767278026/: runs.csv  token_latencies.csv
output/1767325731/: runs.csv  token_latencies.csv
plots_extrapolation/: gen_tokens_extrapolation_kv_cache.csv  gen_tokens_extrapolation_no_cache.csv  prompt_len_extrapolation_kv_cache.csv  prompt_len_extrapolation_no_cache.csv
report/: analysis_cache_gains_summary.csv  analysis_decode_scaling_fits.csv  analysis_meta.csv  analysis_pairwise_summary.csv  analysis_scenarios_kv_cache.csv  analysis_scenarios_no_cache.csv  analysis_token_latency_late_bins_kv.csv  analysis_token_latency_profile_kv.csv  analysis_token_latency_ratios_kv.csv  analysis_tokenlatencies_late_summary_no_cache_v2.csv  analysis_tokenlatencies_profile_all_v2.csv  analysis_tokenlatencies_ratios_kv_v2.csv  analysis_tokenlatencies_ratios_no_cache_v2.csv
src/: lib.rs  main.rs  main_first_runs.rs  main_gen_tokens.rs
(+69 files in other folders)
